[gd_scene load_steps=20 format=2]

[ext_resource path="res://Levels/Level1/Tilesets/Tileset1.tres" type="TileSet" id=1]
[ext_resource path="res://Levels/Level1/Tilesets/TilesetBack2.tres" type="TileSet" id=2]
[ext_resource path="res://Misc/Rooms/SmallRooms/SmallRoom.gd" type="Script" id=4]
[ext_resource path="res://Levels/Level1/Sprites/WallTorch.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/LevelAssets/Doorways/IronBars.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/LevelAssets/BackgroundPlus/Arch4.png" type="Texture" id=8]
[ext_resource path="res://Levels/LevelAssets/BackgroundPlus/WoodenPillar.png" type="Texture" id=9]
[ext_resource path="res://Levels/Begin/Sprites/Chandelier.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/Level1/EnvirSprites/Traps/FireTrap.tscn" type="PackedScene" id=11]
[ext_resource path="res://Levels/LevelAssets/RetractableSpikes/RetractSpikes.tscn" type="PackedScene" id=12]
[ext_resource path="res://Shaders/Ray.tscn" type="PackedScene" id=13]
[ext_resource path="res://Levels/Begin/Sprites/ExplosiveBarrel.tscn" type="PackedScene" id=14]
[ext_resource path="res://Levels/Begin/Sprites/Barrel.tscn" type="PackedScene" id=15]
[ext_resource path="res://Misc/Rooms/EnemySpawner.tscn" type="PackedScene" id=16]

[sub_resource type="Shader" id=1163]
code = "/*
Shader from Godot Shaders - the free shader library.
godotshaders.com/shader/god-rays

Feel free to use, improve and change this shader according to your needs
and consider sharing the modified result on godotshaders.com.
*/

shader_type canvas_item;

uniform float angle = -0.3;
uniform float position = -0.2;
uniform float spread : hint_range(0.0, 1.0) = 0.5;
uniform float cutoff : hint_range(-1.0, 1.0) = 0.1;
uniform float falloff : hint_range(0.0, 1.0) = 0.4;
uniform float edge_fade : hint_range(0.0, 1.0) = 0.2;

uniform float speed = 2.0;
uniform float ray1_density = 8.0;
uniform float ray2_density = 30.0;
uniform float ray2_intensity : hint_range(0.0, 1.0) = 0.3;

uniform vec4 color : hint_color = vec4(1.0, 0.9, 0.65, 0.8);

uniform bool hdr = false;
uniform float seed = 5.0;

// Random and noise functions from Book of Shader's chapter on Noise.
float random(vec2 _uv) {
    return fract(sin(dot(_uv.xy,
                         vec2(12.9898, 78.233))) *
        43758.5453123);
}

float noise (in vec2 uv) {
    vec2 i = floor(uv);
    vec2 f = fract(uv);

    // Four corners in 2D of a tile
    float a = random(i);
    float b = random(i + vec2(1.0, 0.0));
    float c = random(i + vec2(0.0, 1.0));
    float d = random(i + vec2(1.0, 1.0));


    // Smooth Interpolation

    // Cubic Hermine Curve. Same as SmoothStep()
    vec2 u = f * f * (3.0-2.0 * f);

    // Mix 4 coorners percentages
    return mix(a, b, u.x) +
            (c - a)* u.y * (1.0 - u.x) +
            (d - b) * u.x * u.y;
}

mat2 rotate(float _angle){
    return mat2(vec2(cos(_angle), -sin(_angle)),
                vec2(sin(_angle), cos(_angle)));
}

vec4 screen(vec4 base, vec4 blend){
	return 1.0 - (1.0 - base) * (1.0 - blend);
}

void fragment()
{
	
	// Rotate, skew and move the UVs
	vec2 transformed_uv = ( rotate(angle) * (UV - position) )  / ( (UV.y + spread) - (UV.y * spread) );
	
	// Animate the ray according the the new transformed UVs
	vec2 ray1 = vec2(transformed_uv.x * ray1_density + sin(TIME * 0.1 * speed) * (ray1_density * 0.2) + seed, 1.0);
	vec2 ray2 = vec2(transformed_uv.x * ray2_density + sin(TIME * 0.2 * speed) * (ray1_density * 0.2) + seed, 1.0);
	
	// Cut off the ray's edges
	float cut = step(cutoff, transformed_uv.x) * step(cutoff, 1.0 - transformed_uv.x);
	ray1 *= cut;
	ray2 *= cut;
	
	// Apply the noise pattern (i.e. create the rays)
	float rays;
	
	if (hdr){
		// This is not really HDR, but check this to not clamp the two merged rays making 
		// their values go over 1.0. Can make for some nice effect
		rays = noise(ray1) + (noise(ray2) * ray2_intensity);
	}
	else{
		 rays = clamp(noise(ray1) + (noise(ray2) * ray2_intensity), 0., 1.);
	}
	
	// Fade out edges
	rays *= smoothstep(0.0, falloff, (1.0 - UV.y)); // Bottom
	rays *= smoothstep(0.0 + cutoff, edge_fade + cutoff, transformed_uv.x); // Left
	rays *= smoothstep(0.0 + cutoff, edge_fade + cutoff, 1.0 - transformed_uv.x); // Right
	
	// Color to the rays
	vec3 shine = vec3(rays) * color.rgb;

	// Try different blending modes for a nicer effect. \"Screen\" is included in the code,
	// but take a look at https://godotshaders.com/snippet/blending-modes/ for more.
	// With \"Screen\" blend mode:
	shine = screen(texture(SCREEN_TEXTURE, SCREEN_UV), vec4(color)).rgb;
	
	COLOR = vec4(shine, rays * color.a);
}"

[sub_resource type="ShaderMaterial" id=1162]
shader = SubResource( 1163 )
shader_param/angle = -0.067
shader_param/position = -0.033
shader_param/spread = 0.808
shader_param/cutoff = 0.327
shader_param/falloff = 1.0
shader_param/edge_fade = 0.266
shader_param/speed = 2.0
shader_param/ray1_density = 13.0
shader_param/ray2_density = 47.0
shader_param/ray2_intensity = 0.33
shader_param/color = Color( 0.984314, 0.639216, 0.333333, 1 )
shader_param/hdr = true
shader_param/seed = 5.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 298.341, 42.2598 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 291.247, 88.5072 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 277.87, 119.08 )

[node name="Room" type="Node2D"]
script = ExtResource( 4 )

[node name="BackgroundTerrain" type="TileMap" parent="."]
modulate = Color( 0.435294, 0.435294, 0.435294, 1 )
scale = Vector2( 0.7, 0.7 )
z_index = -5
z_as_relative = false
tile_set = ExtResource( 2 )
compatibility_mode = true
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( -196618, 4, 0, -196617, 4, 0, -196616, 4, 0, -196615, 4, 0, -196614, 4, 0, -196613, 4, 0, -196612, 4, 0, -196611, 4, 0, -196610, 4, 0, -196609, 4, 0, -262144, 4, 0, -262143, 4, 0, -262142, 4, 0, -262141, 0, 0, -131082, 4, 0, -131081, 4, 0, -131080, 4, 0, -131079, 4, 0, -131078, 4, 0, -131077, 4, 0, -131076, 4, 0, -131075, 4, 0, -131074, 4, 0, -131073, 4, 0, -196608, 4, 0, -196607, 4, 0, -196606, 4, 0, -196605, 0, 0, -65546, 4, 0, -65545, 4, 0, -65544, 4, 0, -65543, 4, 0, -65542, 4, 0, -65541, 4, 0, -65540, 4, 0, -65539, 4, 0, -65538, 4, 0, -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 0, 0, -10, 4, 0, -9, 4, 0, -8, 4, 0, -7, 4, 0, -6, 4, 0, -5, 4, 0, -4, 4, 0, -3, 4, 0, -2, 4, 0, -1, 1073741831, 0, -65536, 1073741830, 0, -65535, 1073741830, 0, -65534, 4, 0, -65533, 0, 0, 65526, 4, 0, 65527, 4, 0, 65528, 4, 0, 65529, 4, 0, 65530, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 1073741829, 0, 0, 22, 0, 1, 9, 0, 2, 0, 0, 3, 0, 0, 131062, 4, 0, 131063, 4, 0, 131064, 4, 0, 131065, 4, 0, 131066, 4, 0, 131067, 4, 0, 131068, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 1073741829, 0, 65536, 0, 0, 65537, 20, 0, 65538, 0, 0, 65539, 0, 0, 196598, 4, 0, 196599, 4, 0, 196600, 4, 0, 196601, 4, 0, 196603, 4, 0, 196604, 4, 0, 196605, 4, 0, 196606, 4, 0, 196607, 1073741829, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 262143, 5, 0 )

[node name="Terrain" type="TileMap" parent="."]
scale = Vector2( 0.7, 0.7 )
z_index = 2
tile_set = ExtResource( 1 )
compatibility_mode = true
centered_textures = true
cell_clip_uv = true
collision_layer = 8
collision_mask = 7
format = 1
tile_data = PoolIntArray( -393226, 13, 0, -393225, 13, 0, -393224, 13, 0, -393223, 13, 0, -393222, 13, 0, -393221, 13, 0, -393220, 13, 0, -393219, 13, 0, -393218, 13, 0, -393217, 13, 0, -458752, 13, 0, -458751, 13, 0, -458750, 13, 0, -458749, 13, 0, -327690, 13, 0, -327689, 13, 0, -327688, 13, 0, -327687, 13, 0, -327686, 13, 0, -327685, 13, 0, -327684, 13, 0, -327683, 13, 0, -327682, 13, 0, -327681, 13, 0, -393216, 13, 0, -393215, 13, 0, -393214, 13, 0, -393213, 13, 0, -262154, 13, 0, -262153, 13, 0, -262152, 13, 0, -262151, 13, 0, -262150, 13, 0, -262149, 13, 0, -262148, 13, 0, -262147, 13, 0, -262146, 13, 0, -262145, 13, 0, -327680, 13, 0, -327679, 13, 0, -327678, 13, 0, -327677, 13, 0, -196618, 11, 0, -196617, 14, 0, -196616, 9, 0, -196615, 14, 0, -196614, 14, 0, -196613, 9, 0, -196612, 14, 0, -196611, 35, 0, -196610, 9, 0, -196609, 9, 0, -262144, 9, 0, -262143, 9, 0, -262142, 536870923, 0, -262141, 13, 0, -131082, 536870924, 0, -196606, 12, 0, -196605, 13, 0, -65546, 536870924, 0, -131070, 12, 0, -131069, 13, 0, -10, 536870922, 0, -8, -2147483631, 0, -7, -2147483633, 0, -6, -2147483633, 0, -5, -1610612719, 0, -1, 17, 0, -65534, 10, 0, -65533, 9, 0, 65535, 15, 0, 131071, 15, 0, 196597, 1073741838, 0, 196598, 1073741838, 0, 196599, 1073741859, 0, 196600, 1073741838, 0, 196601, 1073741838, 0, 196602, 1073741833, 0, 196603, 1073741859, 0, 196604, 1073741859, 0, 196605, 1073741859, 0, 196606, 1073741833, 0, 196607, 1073741842, 0, 131072, 1073741859, 0, 131073, 1073741833, 0, 131074, 1073741838, 0, 131075, 1073741838, 0, 131076, 1073741838, 0, 262133, 13, 0, 262134, 13, 0, 262135, 13, 0, 262136, 13, 0, 262137, 13, 0, 262138, 13, 0, 262139, 13, 0, 262140, 13, 0, 262141, 13, 0, 262142, 13, 0, 262143, 13, 0, 196608, 13, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 327669, 13, 0, 327670, 13, 0, 327671, 13, 0, 327672, 13, 0, 327673, 13, 0, 327674, 13, 0, 327675, 13, 0, 327676, 13, 0, 327677, 13, 0, 327678, 13, 0, 327679, 13, 0, 262144, 13, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0 )

[node name="BackgroundPlus" type="Node2D" parent="."]

[node name="Arch4" type="Sprite" parent="BackgroundPlus"]
position = Vector2( -268.817, 49.5887 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="WoodenPillar" type="Sprite" parent="BackgroundPlus"]
position = Vector2( -83.0443, -18.5361 )
texture = ExtResource( 9 )

[node name="WoodenPillar2" type="Sprite" parent="BackgroundPlus"]
position = Vector2( -151.121, -18.5361 )
texture = ExtResource( 9 )

[node name="Assets" type="Node2D" parent="."]

[node name="WallTorch" parent="Assets" instance=ExtResource( 6 )]
position = Vector2( -270.291, -103.152 )

[node name="WallTorch2" parent="Assets" instance=ExtResource( 6 )]
position = Vector2( 65.9752, 16.4006 )

[node name="WallTorch3" parent="Assets" instance=ExtResource( 6 )]
position = Vector2( -270.363, 24.9177 )

[node name="Chandelier" parent="Assets" instance=ExtResource( 10 )]
position = Vector2( -118.158, -109.077 )

[node name="Ray22" parent="Assets" instance=ExtResource( 13 )]
material = SubResource( 1162 )
position = Vector2( -304.741, 87.3809 )
rotation = 4.71239
scale = Vector2( -1.7852, 1.7852 )
z_index = 3

[node name="Ray23" parent="Assets" instance=ExtResource( 13 )]
material = SubResource( 1162 )
position = Vector2( 38.94, 87.3809 )
rotation = 4.71239
scale = Vector2( -1.785, -1.785 )
z_index = 3

[node name="Traps" type="Node2D" parent="."]

[node name="RetractSpikes" parent="Traps" instance=ExtResource( 12 )]
position = Vector2( 76.5802, -76.4495 )
rotation = -1.57079

[node name="FireTrap" parent="Traps" instance=ExtResource( 11 )]
position = Vector2( -180.988, -21.7984 )
rotation = 1.57079

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -133.141, 50.7361 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -133.384, -79.8639 )
shape = SubResource( 2 )

[node name="ShutArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShutArea"]
position = Vector2( -134.036, -26.0841 )
shape = SubResource( 3 )

[node name="CameraLimits" type="Node2D" parent="."]

[node name="Top" type="Node2D" parent="CameraLimits"]
position = Vector2( -131.832, -234.893 )

[node name="Left" type="Node2D" parent="CameraLimits"]
position = Vector2( -438.991, -37.8528 )

[node name="Bottom" type="Node2D" parent="CameraLimits"]
position = Vector2( -136.97, 198.858 )

[node name="Right" type="Node2D" parent="CameraLimits"]
position = Vector2( 168.81, -40.4675 )

[node name="IronBars" parent="." instance=ExtResource( 7 )]
position = Vector2( 151.891, 39.6819 )

[node name="IronBars2" parent="." instance=ExtResource( 7 )]
position = Vector2( -419.452, 39.6819 )

[node name="EnemySpawners" type="Node2D" parent="."]

[node name="EnemySpawner" parent="EnemySpawners" instance=ExtResource( 16 )]
position = Vector2( 26.66, 53.5055 )

[node name="EnemySpawner2" parent="EnemySpawners" instance=ExtResource( 16 )]
position = Vector2( -270.597, 60.2327 )

[node name="EnemySpawner3" parent="EnemySpawners" instance=ExtResource( 16 )]
position = Vector2( -299.187, -80.6175 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Barrel" parent="." instance=ExtResource( 15 )]
position = Vector2( -210.453, -68.7358 )

[node name="ExplosiveBarrel" parent="." instance=ExtResource( 14 )]
position = Vector2( -22.4406, -62.5623 )

[node name="SpawnRoomAnchor" type="Node2D" parent="."]
position = Vector2( -627.072, 0 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="ShutArea" to="." method="_on_ShutArea_body_entered"]
